# resilient-finch

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.py
resilient_finch/: __init__.py  aec.py  app.py  capture.py  config.py  configure.py  mcp_server.py  session.py  transcriber.py
resilient_finch/outputs/: __init__.py  base.py  google_docs.py  text_file.py
